--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,23 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.chaquo.python'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.0"
+    compileSdkVersion 30
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.PjMathematician.ImgMath"
-        minSdkVersion 14
-        targetSdkVersion 21
+        minSdkVersion 16
+        targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
+		ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
+		python{
+			buildPython "/data/user/0/ru.iiec.pydroid3/files/aarch64-linux-android/bin/python3"
+		}
+		
     }
     buildTypes {
         release {
@@ -21,4 +29,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+	implementation 'com.android.support:appcompat-v7:27.1.1'
+	compile 'io.github.kexanie.library:MathView:0.0.6'
 }
