--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,14 @@
 
 buildscript {
     repositories {
-        jcenter()
+		google()
+		jcenter()
+		maven { url "https://chaquo.com/maven" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.+'
+        classpath 'com.android.tools.build:gradle:4.0.1'
+		classpath "com.chaquo.python:gradle:8.0.1"
+		
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,6 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
+		google()
         jcenter()
     }
 }
