--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     repositories {
+		mavenCentral()
+		google()
         jcenter()
     }
     dependencies {
@@ -14,6 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
+		mavenCentral()
+		google()
         jcenter()
     }
 }
