--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.0"
 
     defaultConfig {
         applicationId "com.PjMathematician.ImgMath"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 21
         versionCode 1
         versionName "1.5.0"
     }
@@ -23,6 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
   
 	implementation 'com.android.support:appcompat-v7:27.1.1'
+	implementation 'com.android.support:preference-v7:26.1.0'
 	compile 'io.github.kexanie.library:MathView:0.0.6'
     
 	
